Istio/istio-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend-dr
spec:
  host: backend
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
